# youtube-scrapper-dpts

./: .gitignore  LICENSE  README.md  pyproject.toml
src/projeto_masterdegree/dados/: data_social_net_dpts.csv
src/projeto_masterdegree/scripts/: scrapper_yt.py  test.py  youtube_pipeline.py  youtube_pipeline_v2.py  youtube_pipeline_v4.py
