[project]
name = "projeto-masterdegree"
version = "0.1.0"
description = ""
authors = [
    {name = "Wesley",email = "wesleycosta908@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "transformers (>=4.53.2,<5.0.0)",
    "bertopic (>=0.17.3,<0.18.0)",
    "umap-learn (>=0.5.9.post2,<0.6.0)",
    "hdbscan (>=0.8.40,<0.9.0)",
    "tf-keras (>=2.19.0,<3.0.0)",
    "emoji (>=2.14.1,<3.0.0)",
    "regex (>=2024.11.6,<2025.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "openai (>=1.95.1,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "ftfy (>=6.3.1,<7.0.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "google-api-python-client (>=2.177.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "youtube-transcript-api[proxies] (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "projeto_masterdegree", from = "src"}]

[tool.poetry.scripts]
youtube-pipeline = "projeto_masterdegree.scripts.youtube_pipeline_v4:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy  = "^2.3.1"
setuptools = "<81.0.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.4"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
